--- a/css/main.css
+++ b/css/main.css
@@ -102,13 +102,12 @@ p {
 .frame {
   position: relative;
   margin: 20px auto;
-  width: 1000px;
-  max-width: 1000px;
-  height: 700px;
+  width: 520px;
+  height: 720px;
   background: rgb(255, 255, 255);
   overflow: hidden;
-  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.3);
-  border-radius: 2%;
+  box-shadow: 0px 0px 40px rgba(62, 62, 62, 0.3);
+  /* border-radius: 2%; */
 }
 
 .hat {
