--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ h3 {
   height: 720px;
   background: rgb(255, 255, 255);
   overflow: hidden;
-  box-shadow: 0px 0px 40px rgba(62, 62, 62, 0.3);
+  /* box-shadow: 0px 0px 40px rgba(62, 62, 62, 0.3); */
   /* border-radius: 2%; */
 }
 
